Finished preprocessing section

--- a/prev_proj_classification/housing_classification.ipynb
+++ b/prev_proj_classification/housing_classification.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "# Classification Models on Our Dataset from the Previous Project\n",
+    "#### Authors: Rahul Gupta & Maddie Subramanian\n",
     "Using the dataset from our previous project, we will first perform data preprocessing before moving on to apply the following classification models and measure their accuracy: Naïve Bayes, Decision Tree (DT), K-Nearest Neighbor (KNN), Support Vector Machines (SVM), and Logistic Regression (Logit).\n",
     "\n",
     "The dataset we used in the last project (linear regression project) was a housing dataset that contained data consisting of house prices and factors that influenced house prices such as average area income, area population, and more."
@@ -16,8 +17,8 @@
    "id": "ba7541a2-b836-4fe6-866e-7d0e21158a79",
    "metadata": {},
    "source": [
-    "## Data Preprocessing\n",
-    "Before applying the models, we need to preprocess the data and modify it so it will fit the classification models."
+    "## Data Preprocessing - Rahul\n",
+    "Before applying the models, we need to preprocess the data and modify it so it will fit the classification models, since the housing data has mainly continuous data. We will need to perform standard preprocessing steps and then move on to converting from continuous to categorical."
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8735509e-c805-4a59-b695-430677cc50b5",
    "metadata": {},
    "outputs": [
@@ -143,7 +144,7 @@
        "4                       USNS Raymond\\r\\nFPO AE 09386  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,8 +163,118 @@
    "id": "0a138909-36b7-4006-9865-446fa5c9d3f3",
    "metadata": {},
    "source": [
-    "### Dropping Columns\n",
-    "In the last project using this dataset, we determined that house addresses would not have a significant influence on house prices and could be dropped, so we will be doing this again."
+    "### Dropping Columns & Missing Values\n",
+    "In the last project using this dataset, we determined that house addresses would not have a significant influence on house prices and could be dropped, so we will be doing this again.\n",
+    "\n",
+    "We will also check and deal with missing values. Just like last time, there are no missing values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f5ea584f-33f0-4fda-9438-42dbd192591a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avg. Area Income                0\n",
+      "Avg. Area House Age             0\n",
+      "Avg. Area Number of Rooms       0\n",
+      "Avg. Area Number of Bedrooms    0\n",
+      "Area Population                 0\n",
+      "Price                           0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop column\n",
+    "housing_df = housing_df.drop('Address', axis=1)\n",
+    "\n",
+    "# Check for missing values\n",
+    "missing_values = housing_df.isna().sum()\n",
+    "print(missing_values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ec906d-7912-4f2d-91ae-2325f64eb422",
+   "metadata": {},
+   "source": [
+    "### Z-Score Normalization & Outliers\n",
+    "We will normalize the dataset and remove any outliers, turning values into z scores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "de76734e-c493-436c-8477-4075ad3803b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entries before outliers = 5000\n",
+      "Entries after outliers = 4943\n",
+      "Entries removed = 57\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Normalize\n",
+    "normal_df = (housing_df - housing_df.mean())/housing_df.std()\n",
+    "\n",
+    "# Remove Outliers\n",
+    "normal_df = normal_df.loc[((normal_df > -3).sum(axis=1)==6) & ((normal_df <= 3).sum(axis=1)==6)]\n",
+    "\n",
+    "print('Entries before outliers = %d' % (housing_df.shape[0]))\n",
+    "print('Entries after outliers = %d' % (normal_df.shape[0]))\n",
+    "print('Entries removed = %d' % (housing_df.shape[0] - normal_df.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "107ec66f-f7ac-47b0-83fc-aa487762f053",
+   "metadata": {},
+   "source": [
+    "### Discretization\n",
+    "In this step, we will use bins and labels to turn continuous data into categorical data so we can use it to fit the classification models. This will group continuous data into bins and assign that bin an appropriate label."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "865cfdfd-8084-4ded-98d2-f132e39644c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Price Price Category\n",
+      "0 -0.490032   Medium Price\n",
+      "1  0.775431     High Price\n",
+      "2 -0.490162   Medium Price\n",
+      "3  0.080835     High Price\n",
+      "4 -1.702348      Low Price\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define bin edges\n",
+    "bins = [-3, -1.5, 0, 1.5, 3]\n",
+    "\n",
+    "# Define labels for each bin\n",
+    "labels = ['Low Price', 'Medium Price', 'High Price', 'Very High Price']\n",
+    "\n",
+    "# Discretize the Price column into categories\n",
+    "normal_df['Price Category'] = pd.cut(normal_df['Price'], bins=bins, labels=labels)\n",
+    "\n",
+    "# Display the first few rows\n",
+    "print(normal_df[['Price', 'Price Category']].head())"
    ]
   },
   {
@@ -171,7 +282,7 @@
    "id": "14ab57b1-e8ae-4e59-bf40-24fb9336e9e1",
    "metadata": {},
    "source": [
-    "## Naïve Bayes Model"
+    "## Naïve Bayes Model - Rahul"
    ]
   },
   {
@@ -187,7 +298,7 @@
    "id": "23d9eac6-5bed-4c24-b2f0-06d41c9de79a",
    "metadata": {},
    "source": [
-    "## Decision Tree (DT) Classification Model"
+    "## Decision Tree (DT) Classification Model - Rahul"
    ]
   },
   {
