Added train/test split, DT, and Naive Bayes

--- a/prev_proj_classification/housing_classification.ipynb
+++ b/prev_proj_classification/housing_classification.ipynb
@@ -279,6 +279,126 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c2aa1b2-f062-4d0d-aea2-83e830d31c97",
+   "metadata": {},
+   "source": [
+    "### Training and Testing Split\n",
+    "We will split the data just like in the regression project. The price category is what we want to predict, hence why it is the y value. All other attributes, except for the actual price value, will be included as X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8aaebbe4-8d92-4faf-8e95-26e630007da2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Avg. Area Income</th>\n",
+       "      <th>Avg. Area House Age</th>\n",
+       "      <th>Avg. Area Number of Rooms</th>\n",
+       "      <th>Avg. Area Number of Bedrooms</th>\n",
+       "      <th>Area Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4291</th>\n",
+       "      <td>-0.501987</td>\n",
+       "      <td>1.385214</td>\n",
+       "      <td>0.273562</td>\n",
+       "      <td>0.209596</td>\n",
+       "      <td>-0.254448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4004</th>\n",
+       "      <td>0.683442</td>\n",
+       "      <td>0.616873</td>\n",
+       "      <td>-0.229666</td>\n",
+       "      <td>-0.706024</td>\n",
+       "      <td>-0.387276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1178</th>\n",
+       "      <td>1.167356</td>\n",
+       "      <td>-0.181790</td>\n",
+       "      <td>-0.271100</td>\n",
+       "      <td>-1.564923</td>\n",
+       "      <td>-1.040300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4722</th>\n",
+       "      <td>0.684353</td>\n",
+       "      <td>-1.625994</td>\n",
+       "      <td>-0.680797</td>\n",
+       "      <td>0.177185</td>\n",
+       "      <td>-0.004475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4882</th>\n",
+       "      <td>-0.596727</td>\n",
+       "      <td>0.448013</td>\n",
+       "      <td>-0.066086</td>\n",
+       "      <td>-1.240810</td>\n",
+       "      <td>-0.071830</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Avg. Area Income  Avg. Area House Age  Avg. Area Number of Rooms  \\\n",
+       "4291         -0.501987             1.385214                   0.273562   \n",
+       "4004          0.683442             0.616873                  -0.229666   \n",
+       "1178          1.167356            -0.181790                  -0.271100   \n",
+       "4722          0.684353            -1.625994                  -0.680797   \n",
+       "4882         -0.596727             0.448013                  -0.066086   \n",
+       "\n",
+       "      Avg. Area Number of Bedrooms  Area Population  \n",
+       "4291                      0.209596        -0.254448  \n",
+       "4004                     -0.706024        -0.387276  \n",
+       "1178                     -1.564923        -1.040300  \n",
+       "4722                      0.177185        -0.004475  \n",
+       "4882                     -1.240810        -0.071830  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = normal_df[['Avg. Area Income', 'Avg. Area House Age', 'Avg. Area Number of Rooms', 'Avg. Area Number of Bedrooms', 'Area Population']]\n",
+    "y = normal_df['Price Category']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14ab57b1-e8ae-4e59-bf40-24fb9336e9e1",
    "metadata": {},
    "source": [
@@ -286,12 +406,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24cb84e6-9b5d-403a-bf3d-b441405312a9",
+   "metadata": {},
+   "source": [
+    "Here, we will apply the Naïve Bayes model to the z-score normalized and discretized data and measure its accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "651f5b35-375b-454d-a38f-a32e3a8afc2a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naïve Bayes Accuracy: = 78.968655%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "naive_bayes = GaussianNB()\n",
+    "naive_bayes.fit(X_train, y_train)\n",
+    "naive_bayes_pred = naive_bayes.predict(X_test)\n",
+    "\n",
+    "naive_bayes_acc = accuracy_score(y_test, naive_bayes_pred)\n",
+    "\n",
+    "print('Naïve Bayes Accuracy: = %f%%' % (naive_bayes_acc * 100))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,9 +449,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a27cfab-717a-4d05-b30b-4677a212dd6f",
+   "metadata": {},
+   "source": [
+    "We will use a decision tree model to predict the price category of the houses. Since we used bins to categorize the continuous data, we will not be using decision tree regressor and will instead use decision tree classifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "89326e16-d3f2-417c-9d59-7571e104ed5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy: = 74.115268%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+    "\n",
+    "dec_tree = DecisionTreeClassifier(criterion='entropy')\n",
+    "dec_tree = dec_tree.fit(X_train, y_train)\n",
+    "\n",
+    "dec_tree_pred = dec_tree.predict(X_test)\n",
+    "dec_tree_acc = accuracy_score(y_test, dec_tree_pred)\n",
+    "\n",
+    "print('Decision Tree Accuracy: = %f%%' % (dec_tree_acc * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0361b00-647e-4cf7-a4d9-2f948c2ae56a",
+   "metadata": {},
+   "source": [
+    "Since we are using a decision tree, we can also display it, although the tree is quite large since we did not set a max tree length. Setting a max tree length results in a smaller tree, however, a smaller tree can also be less accurate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3211e5e4-0e2b-4c8b-9cab-e8e5adc42386",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Displays the tree\n",
+    "# TODO: UNCOMMENT THIS AND RUN BEFORE SUBMISSION, THIS CODE TAKES FOREVER TO RUN\n",
+    "\n",
+    "# plt.figure(figsize=(20,10))\n",
+    "# plot_tree(dec_tree, filled=True, feature_names=X_train.columns, class_names=labels)\n",
+    "# plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89326e16-d3f2-417c-9d59-7571e104ed5e",
+   "id": "6e836bbb-bde6-44dc-9f5f-0e91a95fffa4",
    "metadata": {},
    "outputs": [],
    "source": []
