Added sections for other models

--- a/prev_proj_classification/housing_classification.ipynb
+++ b/prev_proj_classification/housing_classification.ipynb
@@ -466,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree Accuracy: = 74.115268%\n"
+      "Decision Tree Accuracy: = 73.306370%\n"
      ]
     }
    ],
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "3211e5e4-0e2b-4c8b-9cab-e8e5adc42386",
    "metadata": {},
    "outputs": [],
@@ -506,9 +506,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e3036f5-4f16-47a3-85e2-d55948242fa4",
+   "metadata": {},
+   "source": [
+    "## K-Nearest Neighbor (KNN) - Maddie"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e836bbb-bde6-44dc-9f5f-0e91a95fffa4",
+   "id": "4356fe5b-8b5d-4635-b6bb-363297d468d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0977959-ab19-47e7-ad61-06558fd98e9e",
+   "metadata": {},
+   "source": [
+    "## Support Vector Machines (SVM) - Maddie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc2a496e-7000-474f-a756-86efa0276864",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74c542b4-9e69-4416-a2d7-2a59e23444f8",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression (Logit) - Maddie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d6f65c9-6b60-427d-8bbf-d99bc4f6d934",
    "metadata": {},
    "outputs": [],
    "source": []
