--- a/prev_proj_classification/housing_classification.ipynb
+++ b/prev_proj_classification/housing_classification.ipynb
@@ -595,7 +595,7 @@
    "id": "c0e4cc6a",
    "metadata": {},
    "source": [
-    "We use SVM in high-dimensional spaces because of its ability to handle non-linear classification problems efficiently through kernel functions. It offers a strong theoretical guarantee and is memory-efficient due to use of the support vectors."
+    "We use SVM in high-dimensional spaces because of its capability to effectively tackle non-linear classification tasks via kernel functions. This method provides robust theoretical underpinnings and exhibits memory efficiency by leveraging support vectors, which are a subset of training data points that determine the decision boundary. By employing kernel functions, SVMs can map input data into higher-dimensional spaces where non-linear relationships between features can be more easily captured, thus enhancing their ability to discern complex patterns in the data. This combination of theoretical soundness, memory efficiency, and flexibility in handling non-linearities makes SVMs a compelling choice for various classification tasks, particularly those involving intricate feature interactions."
    ]
   },
   {
