--- a/prev_proj_classification/housing_classification.ipynb
+++ b/prev_proj_classification/housing_classification.ipynb
@@ -665,7 +665,7 @@
    "id": "78c23a70",
    "metadata": {},
    "source": [
-    "We use Logistic Regression for binary classification tasks. It's useful when the relationship between features and target is approximately linear and when probabilistic outputs are desired."
+    "We use Logistic Regression because it's well-suited for binary classification endeavors, offering utility when there is an approximate linear relationship between features and the target variable as desired. It becomes particularly advantageous when there is a need for probabilistic outputs, allowing for the assessment of the likelihood of an instance belonging to a certain class."
    ]
   },
   {
