--- a/prev_proj_classification/housing_classification.ipynb
+++ b/prev_proj_classification/housing_classification.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Classification Models on Our Dataset from the Previous Project\n",
     "#### Authors: Rahul Gupta & Maddie Subramanian\n",
-    "#### Edited by: Warisara Lee\n",
+    "### Edited by: Warisara Lee\n",
     "Using the dataset from our previous project, we will first perform data preprocessing before moving on to apply the following classification models and measure their accuracy: Naïve Bayes, Decision Tree (DT), K-Nearest Neighbor (KNN), Support Vector Machines (SVM), and Logistic Regression (Logit).\n",
     "\n",
     "The dataset we used in the last project (linear regression project) was a housing dataset that contained data consisting of house prices and factors that influenced house prices such as average area income, area population, and more."
@@ -801,7 +801,7 @@
    "id": "387744f7-605d-453a-9446-9b2213dfb7e7",
    "metadata": {},
    "source": [
-    "Upon further investigation, it seems that there are far more entries in the dataset that have a medium price and a high price as compared to the number of entries with a low price and very high price. This may have had some cause in giving the logistic regression a higher accuracy since most entries are either high price or medium price, potentially creating binary classification. To increase accuracy even further for other models, the way the bins are distributed would have to be altered to have a more even spread."
+    "Upon further investigation, it appears that the dataset contains a disproportionate number of entries categorized as medium and high prices compared to those labeled as low and very high prices. This skewed distribution likely contributed to the higher accuracy observed with logistic regression, as it might have facilitated a de facto binary classification scenario due to most entries being either high price or medium price. To enhance accuracy for other models, adjusting the distribution of bins to achieve a more balanced representation across price categories could be beneficial, ensuring a fairer assessment of model performance across all classes."
    ]
   }
  ],
