--- a/prev_proj_classification/housing_classification.ipynb
+++ b/prev_proj_classification/housing_classification.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Classification Models on Our Dataset from the Previous Project\n",
     "#### Authors: Rahul Gupta & Maddie Subramanian\n",
-    "### Edited by: Warisara Lee\n",
+    "##### Edited by: Warisara Lee\n",
     "Using the dataset from our previous project, we will first perform data preprocessing before moving on to apply the following classification models and measure their accuracy: Naïve Bayes, Decision Tree (DT), K-Nearest Neighbor (KNN), Support Vector Machines (SVM), and Logistic Regression (Logit).\n",
     "\n",
     "The dataset we used in the last project (linear regression project) was a housing dataset that contained data consisting of house prices and factors that influenced house prices such as average area income, area population, and more."
