--- a/prev_proj_classification/housing_classification.ipynb
+++ b/prev_proj_classification/housing_classification.ipynb
@@ -454,7 +454,7 @@
    "id": "8a27cfab-717a-4d05-b30b-4677a212dd6f",
    "metadata": {},
    "source": [
-    "We will use a decision tree model to predict the price category of the houses. Since we used bins to categorize the continuous data, we will not be using decision tree regressor and will instead use decision tree classifier."
+    "We will use a Decision Tree model to predict the price category of the houses. Given that our data has been discretized into bins for categorical classification, we will opt for a decision tree classifier rather than a decision tree regressor, aligning with the nature of our task where we're predicting discrete categories rather than continuous values."
    ]
   },
   {
@@ -527,7 +527,7 @@
    "id": "0d8b92e2",
    "metadata": {},
    "source": [
-    "We use the K-Nearest Neighbor to calculate the distance between the input data point and all the training examples because it classifies data points based on the majority vote of their nearest neighbors."
+    "We use the K-Nearest Neighbor to calculate the distance between the input data point and all the training examples, subsequently relying on the majority vote of its nearest neighbors for classification. This method is intuitive, as it assigns the class label of the most prevalent category among the k nearest neighbors, making it particularly effective for locally structured datasets."
    ]
   },
   {
