--- a/Part 2/Part 2.ipynb
+++ b/Part 2/Part 2.ipynb
@@ -5,7 +5,7 @@
    "id": "359d1dad-08f2-43d3-a310-652f52003ddc",
    "metadata": {},
    "source": [
-    "Classification Model Project Part 2: Feature Selection & Data Splitting"
+    "# Classification Model Project Part 2: Feature Selection & Data Splitting"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "39ffe496-ed7c-4148-ba78-d36482c72633",
    "metadata": {},
    "source": [
-    "Loading Given Dataset:"
+    "#### Loading Given Dataset:"
    ]
   },
   {
